# govdoc-generator-rust

./: .env.example  .gitignore  Cargo.toml  INIT.md  PROGRESS.md  README.md  SKILL.md
.github/workflows/: ci.yml
crates/govdoc-api/: Cargo.toml
crates/govdoc-api/src/: lib.rs  main.rs  memory.rs  mock.rs  providers.rs
crates/govdoc-api/tests/: api_behavior_parity.rs
crates/govdoc-domain/: Cargo.toml
crates/govdoc-domain/src/: lib.rs  rules.rs  schemas.rs
crates/govdoc-storage/: Cargo.toml
crates/govdoc-storage/src/: hnsw.rs  lib.rs  sqlite.rs  vector_index.rs
crates/govdoc-usecases/: Cargo.toml
crates/govdoc-usecases/src/: edit.rs  generation.rs  lib.rs  ports.rs
docs/: data-flow.html  data-flow.md
migrations/: 0001_init.sql
scripts/: desktop_dev.sh  download_model.sh  pdf_layout_sidecar.py  prepare_sidecar.sh  render_docx_sidecar.py  searchable_pdf_sidecar.py  serve_embeddings.py  serve_embeddings.sh  serve_llm.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
templates/: README.md
ui/: app.js  index.html  styles.css
ui/js/: general-docs.js  main.js  official-docs.js  state.js  uploads.js  utils.js
