[workspace]
members = [
    "crates/govdoc-domain",
    "crates/govdoc-usecases",
    "crates/govdoc-storage",
    "crates/govdoc-api",
]
# The Tauri desktop shell is built separately (cargo tauri ...) and pulls heavy,
# platform-specific deps, so keep it out of `cargo test --workspace` and CI.
exclude = ["src-tauri"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled", "chrono", "serde_json"] }
schemars = { version = "0.8", features = ["chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "process"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"

