[package]
name = "govdoc-api"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
govdoc-domain = { path = "../govdoc-domain" }
govdoc-usecases = { path = "../govdoc-usecases" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true

