[package]
name = "govdoc-storage"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
govdoc-domain = { path = "../govdoc-domain" }
govdoc-usecases = { path = "../govdoc-usecases" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

