[package]
name = "govdoc-usecases"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
govdoc-domain = { path = "../govdoc-domain" }
schemars.workspace = true
serde_json.workspace = true
thiserror.workspace = true
